--- a/Emoji Dictionary/Base.lproj/Main.storyboard
+++ b/Emoji Dictionary/Base.lproj/Main.storyboard
@@ -39,5 +39,40 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="3th-86-oRu">
+            <objects>
+                <viewController id="4Rk-xW-azj" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="pLy-Hy-b78">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="💒" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R3L-of-bMF">
+                                <rect key="frame" x="78.666666666666686" y="84" width="218" height="239"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="200"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This is a lovely church" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vrc-b9-LQf">
+                                <rect key="frame" x="103" y="373" width="169" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="vrc-b9-LQf" firstAttribute="top" secondItem="R3L-of-bMF" secondAttribute="bottom" constant="50" id="X7R-LS-K84"/>
+                            <constraint firstItem="R3L-of-bMF" firstAttribute="centerX" secondItem="pLy-Hy-b78" secondAttribute="centerX" id="XQM-HJ-CrZ"/>
+                            <constraint firstItem="R3L-of-bMF" firstAttribute="top" secondItem="2Qf-RL-oEn" secondAttribute="top" constant="40" id="YHr-ef-khX"/>
+                            <constraint firstItem="vrc-b9-LQf" firstAttribute="centerX" secondItem="pLy-Hy-b78" secondAttribute="centerX" id="x0W-SZ-gqq"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="2Qf-RL-oEn"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0WN-W0-FkI" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="927" y="122"/>
+        </scene>
     </scenes>
 </document>
